--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        mavenCentral()
+        maven { url 'http://192.168.12.18:28081/repository/ragentek-public/' }
     }
 }
 
